<resources>
    <string name="app_name">Weeksixtask</string>
    <string name="profile_picture">profile picture</string>
    <string name="name">Ahmed hassan</string>
    <string name="job_title">Engineer</string>
    <string name="country_name">UK</string>
    <string name="location_icon">location_icon</string>
    <string name="star_icon">star icon</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_4_5">4.5</string>
    <string name="russian">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
    <string name="_3_hr">3 hr</string>
</resources>