<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/design_group"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="16dp"
        android:background="@drawable/background_shape"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile_image" />

        <LinearLayout
            android:id="@+id/details_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_small"
                android:fontFamily="@font/dmsans_medium"
                android:text="@string/job_title"
                android:textColor="@color/nato_blue" />

            <LinearLayout
                android:id="@+id/location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="@dimen/top_margin_small"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="@dimen/top_margin_so_small"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_name"
                    android:textColor="@color/bold_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/review_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_small"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <TextView
                    android:id="@+id/review_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_150_reviews"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/top_margin_small"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/_4_5"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="@dimen/top_margin_four_dp"
                    android:layout_marginTop="@dimen/top_margin_so_small"
                    android:contentDescription="@string/star_icon"
                    android:src="@drawable/ic_star" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/another_details_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="11dp"
            android:gravity="end"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="38dp"
                android:layout_height="22dp"
                android:background="@drawable/circel_shape"
                android:clickable="false"
                android:text="@string/_3_hr"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/nathonality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_small"
                android:fontFamily="@font/dmsans_medium"
                android:text="@string/russian"
                android:textColor="@color/nato_blue" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_small"
                android:text="@string/_5_days_ago"
                android:textColor="@color/bold_gray" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>